After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742075 - Breaks when IGMP proxy restarted
Breaks when IGMP proxy restarted
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
0.20.x
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-12-28 22:06 UTC by orbisvicis
Modified: 2015-01-04 12:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
acl: Don't keep reference of the service (2.44 KB, patch)
2015-01-04 11:58 UTC, Jens Georg
committed Details | Review

Description orbisvicis 2014-12-28 22:06:28 UTC
rygel - 0.24.2 - 1.fc21

Breaks when router (IGMP proxy) restarted.

rygel[962]: (rygel:962): libsoup-CRITICAL **: soup_server_quit: assertion 'priv->listeners != NULL' failed 
rygel[962]: (rygel:962): GLib-GObject-CRITICAL **: object SoupServer 0x199f660 finalized while still in-construction 
rygel[962]: (rygel:962): GLib-GObject-CRITICAL **: Custom constructor for class SoupServer returned NULL (which is invalid). Please use GInitable instead. 
rygel[962]: ** (rygel:962): WARNING **: Error creating GUPnP context: Could not create HTTP server on port 61900
Comment 1 Jens Georg 2014-12-29 12:40:49 UTC
Yeah, I've seen that also when a network interface goes down and up. We have a reference count leak somewhere.
Comment 2 Jens Georg 2015-01-04 11:58:29 UTC
Created attachment 293705 [details] [review]
acl: Don't keep reference of the service

The handler will live at least as long as the service since it's bound to the
context so there is no need to keep a reference of it.

Signed-off-by: Jens Georg <mail@jensge.org>
Comment 3 Jens Georg 2015-01-04 12:08:44 UTC
Attachment 293705 [details] pushed as 3e4f29b - acl: Don't keep reference of the service