acl: Don't keep reference of the service

The handler will live at least as long as the service since it's bound to the
context so there is no need to keep a reference of it.

Signed-off-by: Jens Georg <mail@jensge.org>

https://bugzilla.gnome.org/show_bug.cgi?id=742075